@@ -1,5 +1,6 @@
 2010-11-22  Tolleiv Nietsch <nietsch@aoemedia.de> 
 
+	* Fixed issue: #16324: Let the auto value for TypoScriptObject path depend on field name (Thanks to 	Christian Mueller)
 	* Fixed issue: #16341: Get rid of the full plugin name
 	* Fixed issue: #16211: a hsc too much 
 
